Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-62152

dcp_backfill_byte_drain_ratio=1.0 might get DCP stuck on backfill->memory transition

    XMLWordPrintable

Details

    • Triaged
    • 0
    • Yes

    Description

      Hit while running tests for MB-62004.

      https://perf.jenkins.couchbase.com/job/oceanus-remotelink-dev/33/console

      15:44:28 2024-06-03T06:44:28 [INFO] ep_dcp_replica_items_remaining = 347034
      15:44:29 2024-06-03T06:44:29 [INFO] ep_dcp_replica_items_remaining = 347034
      15:44:30 2024-06-03T06:44:30 [INFO] ep_dcp_replica_items_remaining = 347034
      ..
      

      The test runs with dcp_backfill_byte_drain_ratio=1.0.

      Live debugging shows DCP replication cursors stuck at the beginning of the open checkpoint for multiple vbuckets:

       ep_dcp_items_remaining:                                                                                  168190
       eq_dcpq:replication:ns_1@172.23.96.5->ns_1@172.23.96.7:bucket-1:dcp_ready_queue_size:                    0
       eq_dcpq:replication:ns_1@172.23.96.5->ns_1@172.23.96.7:bucket-1:items_remaining:                         168190
      

       eq_dcpq:replication:ns_1@172.23.96.5->ns_1@172.23.96.7:bucket-1:stream_4:                                {"backfill_buffer_bytes":"0","backfill_buffer_items":"0","backfill_disk_items":"0","backfill_mem_items":"0","backfill_sent":"0","change_streams_enabled":"false","cursor_registered":"true","end_seqno":"18446744073709551615","filter_type":"passthrough","flags":"0","items_ready":"false","last_read_seqno":"13327","last_sent_seqno":"13327","last_sent_seqno_advance":"0","last_sent_snap_end_seqno":"13327","memory_phase":"13327","opaque":"7","readyQ_items":"0","ready_queue_memory":"0","snap_end_seqno":"0","snap_start_seqno":"0","start_seqno":"0","state":"backfilling","vb_uuid":"0"}
      

       
       
       vb_4:eq_dcpq:replication:ns_1@172.23.96.5->ns_1@172.23.96.7:bucket-1:cursor_checkpoint_id:   1378
       vb_4:eq_dcpq:replication:ns_1@172.23.96.5->ns_1@172.23.96.7:bucket-1:cursor_distance:        0
       vb_4:eq_dcpq:replication:ns_1@172.23.96.5->ns_1@172.23.96.7:bucket-1:cursor_op:              empty
       vb_4:eq_dcpq:replication:ns_1@172.23.96.5->ns_1@172.23.96.7:bucket-1:cursor_seqno:           310337
       vb_4:eq_dcpq:replication:ns_1@172.23.96.5->ns_1@172.23.96.7:bucket-1:num_items_for_cursor:   691
       vb_4:eq_dcpq:replication:ns_1@172.23.96.5->ns_1@172.23.96.7:bucket-1:num_visits:             0
       vb_4:id_1378:highest_expelled_seqno:                                                         0
       vb_4:id_1378:historical:                                                                     false
       vb_4:id_1378:key_index_allocator_bytes:                                                      52352
       vb_4:id_1378:mem_usage_key_index_overhead:                                                   11178
       vb_4:id_1378:mem_usage_queue_overhead:                                                       16608
       vb_4:id_1378:mem_usage_queued_items:                                                         312774
       vb_4:id_1378:num_cursors_in_checkpoint:                                                      2
       vb_4:id_1378:num_items:                                                                      691
       vb_4:id_1378:queue_allocator_bytes:                                                          16608
       vb_4:id_1378:snap_end:                                                                       311026
       vb_4:id_1378:snap_start:                                                                     310337
       vb_4:id_1378:state:                                                                          Open
       vb_4:id_1378:type:                                                                           Memory
       vb_4:id_1378:visible_snap_end:                                                               311026
       vb_4:mem_usage:                                                                              341008
       vb_4:mem_usage_key_index_overhead:                                                           11178
       vb_4:mem_usage_queue_overhead:                                                               16608
       vb_4:mem_usage_queued_items:                                                                 312774
       vb_4:num_checkpoint_items:                                                                   691
       vb_4:num_checkpoints:                                                                        1
       vb_4:num_conn_cursors:                                                                       2
       vb_4:num_open_checkpoint_items:                                                              691
       vb_4:open_checkpoint_id:                                                                     1378
       vb_4:persistence:cursor_checkpoint_id:                                                       1378
       vb_4:persistence:cursor_distance:                                                            691
       vb_4:persistence:cursor_op:                                                                  mutation
       vb_4:persistence:cursor_seqno:                                                               311026
       vb_4:persistence:num_items_for_cursor:                                                       0
       vb_4:persistence:num_visits:                                                                 15
       vb_4:state:                                                                                  active
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              raghav.sk Raghav S K
              paolo.cocchi Paolo Cocchi
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty